zona-deploy/server-mesh/commons/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080 # Public-facing port
    filter_chains:
    - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              generate_request_id: true # Generates a unique x-request-id
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"] # Match any domain
                  routes:
                  - match:
                      prefix: "/" # Match any path
                    route:
                      cluster: simple_server_cluster # Send traffic to this cluster   

              # The body filter is required to log request/response bodies. It must come before the router.
              http_filters:
              - name: envoy.filters.http.lua
                typed_config:
                  "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
                  inline_code: |
                    function envoy_on_request(handle)
                      local service = os.getenv("SERVICE_NAME") or "products-api"
                      local inst = os.getenv("INSTANCE_ID") or "inst-0000"
                      local rid = service .. "-" .. inst
                      handle:headers():replace("x-resource-id", rid)
                    end

              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

              access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: "/var/log/envoy/access.log"
                  log_format:
                    json_format:
                      id_recurso: "%REQ(x-resource-id)%"
                      id_transaccion: "%REQ(X-REQUEST-ID)%"
                      id_consumer: "%REQ(X-CONSUMER-ID)%"
                      ip_transaccion: "%UPSTREAM_HOST%"
                      ip_consumer: "%DOWNSTREAM_REMOTE_ADDRESS%"
                      date_transaction: "%START_TIME(%Y-%m-%dT%H:%M:%S%z)%"
                      endpoint: "%REQ(:PATH)%"
                      tipo_operacion: "%REQ(:METHOD)%"
                      status_response: "%RESPONSE_CODE%"
                      time_transaction: "%DURATION%"
                      req_body_size: "%BYTES_RECEIVED%"
                      resp_body_size: "%BYTES_SENT%"

  - name: listener_egress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9001 
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: egress_http
          
          route_config:
            name: egress_route
            virtual_hosts:
            - name: egress_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_b_cluster
                request_headers_to_add:
                  - header:
                      key: "X-CONSUMER-ID" 
                      value: "%REQ(x-resource-id)%"
                    append_action: OVERWRITE_IF_EXISTS_OR_ADD
          
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: simple_server_cluster
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: simple_server_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app # This must match the service name in docker-compose.yml
                port_value: 8080

  - name: service_b_cluster
    type: LOGICAL_DNS
    connect_timeout: 1s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_b_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "httpbin.org" 
                port_value: 80
